# mem

./: AGENTS.md  Cargo.toml  README.md  justfile  transcript-browser-profile.json  transcript-browser-screen-ref.json
.agents/skills/vanilla-pty/: SKILL.md
cli/: Cargo.toml
cli/src/: args.rs  dump_screen.rs  hydration.rs  indexed.rs  input.rs  main.rs  profile_scroll.rs  render.rs  runtime.rs  screen_ref.rs  storage.rs  test_compare.rs  test_large.rs  test_textwrap.rs  test_utils.rs  theme.rs  trial_trace.rs
cli/src/providers/: claude.rs  codex.rs  mod.rs
cli/tests/fixtures/: crispy_messages.json
docs/: indexing-architecture.md  product-direction.md  refactor-plan.md  rendering-implementation-advice.md  search-design-principles.md  search-usability-trials.md
docs/research/: 2026-03-23-transcript-indexer-survey.md
docs/research/2026-03-23-transcript-indexer-survey/: brief.md
docs/research/transcript-indexers/: 2026-03-23-cc-sessions.md  2026-03-23-ccrider.md  2026-03-23-ccs.md  2026-03-23-claude-history.md  2026-03-23-claude-run.md  2026-03-23-coding_agent_session_search.md  2026-03-23-memex.md  2026-03-23-plumbing-frameworks-synthesis.md  2026-03-23-recall.md  2026-03-23-transcript-browser.md
shared/: Cargo.toml
shared/src/: app.rs  domain.rs  lib.rs
tasks/: lessons.md
