[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
ratatui = "0.26.1"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
crux_core = "0.16.2"
serde_json = "1.0.149"
chrono = "0.4.44"
regex = "1.12.3"
arboard = "3.6.1"
textwrap = "0.16.2"
